Making website start at  root

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://kyoko522.github.io/react-portfolio-website-1",
-  "name": "react-portfolio-website-1",
+  "name": "sheel-portfolio-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
