--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.15",
+    "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
