--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
